# PEQNP

./: .gitignore  .readthedocs.yml  CMakeLists.txt  CNAME  LICENSE.txt  MANIFEST  PKG-INFO  README.md  _config.yml  schur-triples.py  setup.cfg  setup.py
.github/: FUNDING.yml
PEQNP.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
deidos/: 3sort.py  CMakeLists.txt  deidos_covenant.cpp  deidos_covenant_boost.cpp
doc/: .readthedocs.yml  HESS_TSP.ipynb  peqnp-lib-by-example-integers-bits.ipynb  peqnp-lib-by-example-integers-constraints.ipynb  peqnp-lib-by-example-integers-operations.ipynb  peqnp-lib-by-example-integers.ipynb  stdlib.txt
doc/docs/: diophantine.md  index.md  problems.md
doc/site/: index.html
doc/site/diophantine/: index.html
docs/: 1000x500_queens_completion_problem.ipynb  CELL_TOWER_COVERAGE.ipynb  PEQNP.ipynb  PEQNP_1250x625_queens_completion_problem.ipynb  classic_csp.ipynb  diophantine.md  drilling_problem.ipynb  full.md  index.md  knight_cloud.ipynb  maximum_constrained_partition.py  mip.md  mkdocs.yml  multiple_maximum_constrained_partition.py  problems.md  requirements.txt  stdlib.md  tensors.ipynb  the_peqnp_system.lyx~  transport.ipynb
docs/site/: 404.html  index.html
examples/: 01-integer-programming.py  1000_queens_completion_problem.ipynb  README.txt  atari-gym.py  bin-packing.py  bpp.py  bpp.txt  cnf_render.py  complex.py  constrained-music-composition.py  constrained_clustering_with_peqnp.py  data.clq  data.sol  data.txt  diophantine1.py  dreaming-nutrition.py  element.py  example.py  factoring.py  gaussian.py  gaussian_factorizations.py  gen-bpp.py  gen-ssp.py  generator.c  hcp.py  k-clq.py  k-vertex-cover.py  knapsack.py  latin_hyper_cubes.py  longest_common_pattern.py  magic.py  matrix-equations.py  max-clq.py  maximum_constrained_partition.py  maxsat.py  min-vertex-cover.py  mip.py  mip_generator.py  multiple_maximum_constrained_partition.py  multiset-reconstruction-by-differences.py  (+25 more)
examples/cnf/: README.md  absolute_values.cnf  absolute_values.mod  absolute_values.py  factorization.cnf  factorization.mod  factorization.py  k_clique.py  k_clique_validator  k_clique_validator.cpp  multiset_reconstruction_by_differences.py  satisfiability.cnf  satisfiability.mod  satisfiability.py  sigma.cnf  sigma.mod  sigma.py  ssp.cnf  ssp.mod  ssp.py  ssp.txt  sudoku.cnf  sudoku.mod  sudoku.py  wta.py
examples/data/: pokemon_data.csv  pq.cnf
examples/default/: constrained_clustering_with_peqnp.py  hard_sudoku_generator.py  multiple_maximum_constrained_partition.py  realtime_cart_pole_v1.py  rsa_factoring_new.py  sat_reformulation.py  upit.py
examples/external_satisfy/: README.md  absolute_values.cnf  absolute_values.mod  absolute_values.py  factorization.cnf  factorization.mod  factorization.py  k_clique.mod  k_clique.py  k_clique.sol  multiset_reconstruction_by_differences.cnf  multiset_reconstruction_by_differences.mod  multiset_reconstruction_by_differences.py  requeriments.txt  satisfiability.cnf  satisfiability.mod  satisfiability.py  sigma.cnf  sigma.mod  sigma.py  ssp.cnf  ssp.mod  ssp.py  sudoku.cnf  sudoku.mod  sudoku.py  wta.cnf  wta.mod  wta.py  wta.txt
examples/old/: readme.txt
examples/peqnp_ws/: Readme.md  app.py
examples/sdk/: absolute_values.py  facilities.py  mip.py  multidimensional_knapsack_problem.py  sudoku.py  tsp_mip.py
examples/v1/: 01-integer-programming.py  generator.c  hcp.py  k-clq.py  longest_common_pattern.py  magic.py  matrix-equations.py  min-vertex-cover.py  n-queens-completion.py  operations.py  permutations_reconstruction.py  permutations_reconstruction_experiment.py  pub.txt  shors_algorithm.py  slime4.py  tsp-balls.py
examples/v2/: collatz.py  designing_boxes.py  multiser_reconstruction_from_pairs_differences.py  multiset-reconstruction-by-differences.py  optimal_priority_problem.py  production_planning.py
examples/v2-boost/: hyper_loop.py  maxsat.py  multidimensional-latin-squares.py  pandemic.py  permutations_reconstruction.py  schur-triples.py  tsp-balls.py
examples/v2-tensor/: k-vertex-cover.py
examples/v3/: SLIME_X_1000_queens_completion.ipynb  cvrp.py  maze-solver.py  perfect-magic-cube-order-4.py  perfect-magic-cubes.py  semi-perfect-magic-cubes.py
hess/cvrpt/: CMakeLists.txt  cvrp.cc  usage.txt
hess/cvrpt/peqnp/tech/: hess.hh
hess/hess_hcp/: CMakeLists.txt  hess_solver.cc  hp.cpp  hp_gui.cpp  usage.txt
hess/hess_hcp/libhess/: CMakeLists.txt
hess/hess_hcp/libhess/include/hess/: hess.h  hess_solver.h
hess/hess_hcp/libhess/src/: hess.c
hess/hess_max2sat/: CMakeLists.txt  hess_max2sat.cc  usage.txt
include/: Dimacs.h  Ls.h  Options.h  ParseUtils.h  SLIME.h  SimpSolver.h  Solver.h  SolverTypes.h  pixie.h  pixie.hh  result.hh  simplex.hh  utils.hh
mtl/: Alloc.h  Map.h  Queue.h
peqnp/: LICENCE.txt  __init__.py  entity.py  gaussian.py  linear.py  mip_solver.py  rational.py  sat_solver.py  solver.py  stdlib.py
peqnp/cnf/: atom.py  csp.py  stdlib.py
peqnp/mtl/: Alloc.h  Map.h
peqnp/peqnp/: __init__.py  solver.py  stdlib.py
peqnp/sdk/: entity.py  sat_solver.py  solver.py  stdlib.py
peqnp/src/: SLIME.cc  SLIME.hh  Solver.cc
sdk/examples/: PEQNP by example.ipynb
sdk/mip/: peqnp_mip.h
sdk/sat/: peqnp_sat.h
sdk/solvers/cadical/: CMakeLists.txt  analyze.cpp  backtrack.cpp  cadical.cpp  decide.cpp  flags.hpp  internal.cpp  internal.hpp  level.hpp  minimize.cpp  options.hpp  order.hpp  peqnp_sat.cpp  profile.hpp  propagate.cpp  restart.cpp  stats.cpp  stats.hpp  version.cpp
sdk/solvers/pixie/: CMakeLists.txt  LICENSE.txt  peqnp_mip.cc
sdk/solvers/pixie/include/: pixie.hh  result.hh  simplex.hh  utils.hh
sdk/solvers/slime/: CMakeLists.txt  LICENSE.txt  peqnp_sat.cc
sdk/solvers/slime/include/: Dimacs.h  Solver.h  SolverTypes.h
sdk/solvers/slime/mtl/: Alg.h  Alloc.h  Heap.h  IntTypes.h  Map.h  Queue.h  Vec.h  XAlloc.h
sdk/solvers/slime/src/: Solver.cc
src/: Ls.cc  Main.cc  Options.cc  SLIME.cc  SLIME.hh  SimpSolver.cc  Solver.cc  pixie.cc
videos/: 01_integer_programming.ipynb  TSP.ipynb  diophantine1.ipynb  partition_peqnp.ipynb
(+53 files in other folders)
