cmake_minimum_required(VERSION 3.14)
project(cvrpt)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)

set(CMAKE_CXX_FLAGS "-std=c++17 -O3 -g0 -DNDEBUG") # -fopenmp -D_GLIBCXX_PARALLEL

add_executable(hess_cvrp cvrp.cc)